@@ -953,11 +953,23 @@ fi
 AC_SUBST(HILDON_THUMBNAIL_CFLAGS)
 AC_SUBST(HILDON_THUMBNAIL_LIBS)
 
-AC_CONFIG_LINKS(tests/tracker-indexer/tracker-metadata.c:src/tracker-indexer/tracker-metadata.c 
+AC_CONFIG_LINKS(tests/tracker-indexer/tracker-dbus.c:src/tracker-indexer/tracker-dbus.c
+                tests/tracker-indexer/tracker-dbus.h:src/tracker-indexer/tracker-dbus.h
+                tests/tracker-indexer/tracker-indexer.c:src/tracker-indexer/tracker-indexer.c
+                tests/tracker-indexer/tracker-indexer.h:src/tracker-indexer/tracker-indexer.h
+                tests/tracker-indexer/tracker-indexer-db.c:src/tracker-indexer/tracker-indexer-db.c
+                tests/tracker-indexer/tracker-indexer-db.h:src/tracker-indexer/tracker-indexer-db.h
+                tests/tracker-indexer/tracker-indexer-glue.h:src/tracker-indexer/tracker-indexer-glue.h
+                tests/tracker-indexer/tracker-indexer-module.c:src/tracker-indexer/tracker-indexer-module.c
+                tests/tracker-indexer/tracker-indexer-module.h:src/tracker-indexer/tracker-indexer-module.h
+                tests/tracker-indexer/tracker-marshal.c:src/tracker-indexer/tracker-marshal.c
+                tests/tracker-indexer/tracker-marshal.h:src/tracker-indexer/tracker-marshal.h
+		tests/tracker-indexer/tracker-metadata.c:src/tracker-indexer/tracker-metadata.c 
                 tests/tracker-indexer/tracker-metadata.h:src/tracker-indexer/tracker-metadata.h
                 tests/tracker-indexer/tracker-metadata-utils.c:src/tracker-indexer/tracker-metadata-utils.c
-                tests/tracker-indexer/tracker-metadata-utils.h:src/tracker-indexer/tracker-metadata-utils.h)
-
+                tests/tracker-indexer/tracker-metadata-utils.h:src/tracker-indexer/tracker-metadata-utils.h
+                tests/tracker-indexer/tracker-module.h:src/tracker-indexer/tracker-module.h
+)
 ##################################################################
 # Write generated files
 ##################################################################
